--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -62,6 +62,7 @@
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="0.4"
                 android:text="@string/old_password"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/colorGreenText"
@@ -75,6 +76,7 @@
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1.5"
                 android:background="@drawable/button_rect"
+                android:fontFamily="sans-serif"
                 android:inputType="textWebPassword"
                 android:textAlignment="textStart"
                 android:textSize="20sp" />
@@ -92,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="0.4"
+                android:fontFamily="sans-serif"
                 android:text="@string/new_password"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -105,6 +108,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1.5"
+                android:fontFamily="sans-serif"
                 android:background="@drawable/button_rect"
                 android:inputType="textWebPassword"
                 android:textAlignment="textStart"
@@ -124,6 +128,7 @@
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="0.4"
                 android:text="@string/repeat_password"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/colorGreenText"
@@ -136,6 +141,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1.5"
+                android:fontFamily="sans-serif"
                 android:background="@drawable/button_rect"
                 android:inputType="textWebPassword"
                 android:textAlignment="textStart"
@@ -156,6 +162,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_margin="3dp"
+                android:fontFamily="sans-serif"
+                android:textStyle="italic|bold"
                 android:background="@drawable/button_rounded"
                 android:text="@string/change"
                 android:textAlignment="center"
@@ -170,6 +178,8 @@
                 android:layout_weight="1"
                 android:layout_margin="3dp"
                 android:background="@drawable/button_rounded"
+                android:fontFamily="sans-serif"
+                android:textStyle="italic|bold"
                 android:text="@string/cancel"
                 android:textAlignment="center"
                 android:textAllCaps="false"
