--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -64,6 +64,7 @@
                 android:text="@string/email_or_cpf"
                 android:textAlignment="center"
                 android:textAllCaps="false"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/colorGreenText"
                 android:textSize="20sp"
                 android:textStyle="italic|bold" />
@@ -75,6 +76,7 @@
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1.5"
                 android:background="@drawable/button_rect"
+                android:fontFamily="sans-serif"
                 android:inputType="textEmailAddress"
                 android:textAlignment="textStart"
                 android:textSize="20sp" />
@@ -96,6 +98,8 @@
                 android:layout_margin="3dp"
                 android:background="@drawable/button_rounded"
                 android:text="@string/next"
+                android:fontFamily="sans-serif"
+                android:textStyle="italic|bold"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/colorGreenText"
@@ -109,6 +113,8 @@
                 android:layout_margin="3dp"
                 android:background="@drawable/button_rounded"
                 android:text="@string/cancel"
+                android:textStyle="italic|bold"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/colorGreenText"
