--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,6 +64,7 @@
                 android:text="@string/user"
                 android:textAlignment="center"
                 android:textAllCaps="false"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/colorGreenText"
                 android:textSize="20sp"
                 android:textStyle="italic|bold" />
@@ -75,6 +76,7 @@
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1.5"
                 android:background="@drawable/button_rect"
+                android:fontFamily="sans-serif"
                 android:inputType="textEmailAddress"
                 android:textAlignment="textStart"
                 android:textSize="20sp" />
@@ -93,6 +95,7 @@
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="0.4"
                 android:text="@string/password"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/colorGreenText"
@@ -105,6 +108,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1.5"
+                android:fontFamily="sans-serif"
                 android:background="@drawable/button_rect"
                 android:inputType="textWebPassword"
                 android:textAlignment="textStart"
@@ -123,6 +127,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
+                android:fontFamily="sans-serif"
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
@@ -138,6 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
+                android:fontFamily="sans-serif"
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
@@ -162,6 +168,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="3dp"
+                android:fontFamily="sans-serif"
+                android:textStyle="italic|bold"
                 android:layout_weight="1"
                 android:background="@drawable/button_rounded"
                 android:text="@string/enter"
@@ -174,6 +182,8 @@
                 android:id="@+id/activity_login_cancel_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:textStyle="italic|bold"
                 android:layout_margin="3dp"
                 android:layout_weight="1"
                 android:background="@drawable/button_rounded"
@@ -211,6 +221,7 @@
                 android:layout_weight="1"
                 android:text="@string/access_with_google"
                 android:textAlignment="center"
+                android:fontFamily="sans-serif"
                 android:textAllCaps="false"
                 android:textColor="@color/colorGreenText"
                 android:textSize="20sp"
