--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -63,6 +63,7 @@
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="0.4"
                 android:text="@string/name"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/colorGreenText"
@@ -75,6 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1.5"
+                android:fontFamily="sans-serif"
                 android:background="@drawable/button_rect"
                 android:inputType="textPersonName"
                 android:textAlignment="textStart"
@@ -94,6 +96,7 @@
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="0.4"
                 android:text="@string/last_name"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/colorGreenText"
@@ -105,6 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
+                android:fontFamily="sans-serif"
                 android:layout_weight="1.5"
                 android:background="@drawable/button_rect"
                 android:inputType="textPersonName"
@@ -123,6 +127,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
+                android:fontFamily="sans-serif"
                 android:layout_weight="0.4"
                 android:text="@string/cpf"
                 android:textAlignment="center"
@@ -138,6 +143,7 @@
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1.5"
                 android:background="@drawable/button_rect"
+                android:fontFamily="sans-serif"
                 android:inputType="numberDecimal"
                 android:textAlignment="textStart"
                 android:textSize="20sp" />
@@ -154,6 +160,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
+                android:fontFamily="sans-serif"
                 android:layout_weight="0.4"
                 android:text="@string/email"
                 android:textAlignment="center"
@@ -167,6 +174,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
+                android:fontFamily="sans-serif"
                 android:layout_weight="1.5"
                 android:background="@drawable/button_rect"
                 android:inputType="textEmailAddress"
@@ -185,6 +193,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
+                android:fontFamily="sans-serif"
                 android:layout_weight="0.4"
                 android:text="@string/password_no_dot"
                 android:textAlignment="center"
@@ -199,6 +208,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1.5"
+                android:fontFamily="sans-serif"
                 android:background="@drawable/button_rect"
                 android:inputType="textEmailAddress"
                 android:textAlignment="textStart"
@@ -217,6 +227,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
                 android:text="@string/politician_profile"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/colorGreenText"
@@ -229,6 +240,7 @@
                 style="@style/custom_check_box"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
                 android:layout_marginHorizontal="15dp"
                 android:background="@drawable/button_rounded"
                 android:textAlignment="center" />
@@ -251,6 +263,8 @@
                 android:background="@drawable/button_rounded"
                 android:text="@string/register2"
                 android:textAlignment="center"
+                android:fontFamily="sans-serif"
+                android:textStyle="italic|bold"
                 android:textAllCaps="false"
                 android:textColor="@color/colorGreenText"
                 android:textSize="20sp" />
@@ -263,6 +277,8 @@
                 android:layout_weight="1"
                 android:background="@drawable/button_rounded"
                 android:text="@string/cancel"
+                android:fontFamily="sans-serif"
+                android:textStyle="italic|bold"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/colorGreenText"
