--- a/app/src/main/res/layout/activity_political_ranking.xml
+++ b/app/src/main/res/layout/activity_political_ranking.xml
@@ -1,27 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activities.PoliticalRankingActivity">
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/activity_political_ranking_app_bar_linear_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:layout_height="80dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@id/activity_political_ranking_vertical_list_linear_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/activity_political_ranking_menu_lateral_image_view"
-            android:clickable="true"
-            android:focusable="true"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.5"
             android:adjustViewBounds="true"
+            android:clickable="true"
+            android:focusable="true"
             android:maxWidth="50dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/menu" />
+            android:src="@drawable/menu"
+            android:layout_marginEnd="70dp" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
@@ -37,58 +43,59 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:fontFamily="sans-serif"
                     android:text="@string/political_ranking"
                     android:textAlignment="center"
-                    android:textStyle="italic|bold"
                     android:textAllCaps="false"
                     android:textColor="@color/colorGreenText"
-                    android:fontFamily="sans-serif"
-                    android:textSize="20sp" />
+                    android:layout_marginEnd="15dp"
+                    android:textSize="24sp"
+                    android:textStyle="italic|bold" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/activity_political_ranking_lateral_bell_image_view"
-                    android:clickable="true"
-                    android:focusable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:src="@drawable/bell"
+                    android:layout_marginStart="30dp"
                     android:adjustViewBounds="true"
-                    android:maxWidth="20dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:maxWidth="35dp"
                     android:scaleType="fitCenter"
-                    android:layout_marginStart="30dp" />
+                    android:src="@drawable/bell" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginVertical="5dp">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/activity_political_ranking_like_image_view"
-                    android:clickable="true"
-                    android:focusable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:maxWidth="20dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/like"
                     android:layout_marginHorizontal="10dp"
-                    android:layout_marginStart="20dp" />
+                    android:layout_marginStart="220dp"
+                    android:adjustViewBounds="true"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:maxWidth="30dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/like" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/activity_political_ranking_promise_image_view"
-                    android:clickable="true"
-                    android:focusable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:maxWidth="20dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/respeito"
                     android:layout_marginHorizontal="10dp"
-                    android:layout_marginStart="40dp" />
+                    android:adjustViewBounds="true"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:maxWidth="40dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/respeito" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -100,7 +107,11 @@
         android:id="@+id/activity_political_ranking_vertical_list_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/activity_political_ranking_vertical_list_linear_layout">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -119,30 +130,29 @@
                     android:focusable="true"
                     android:src="@drawable/profile"
                     android:adjustViewBounds="true"
-                    android:maxWidth="20dp"
+                    android:maxWidth="50dp"
                     android:scaleType="fitCenter"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginHorizontal="10dp" />
+                    android:layout_marginEnd="70dp" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textStyle="italic|bold"
                     app:textAllCaps="false"
-                    android:textSize="20sp"
+                    android:textSize="24sp"
                     android:textColor="@color/colorGreenText"
                     android:textAllCaps="false"
                     android:textAlignment="center"
                     android:text="@string/politician_name"
                     android:fontFamily="sans-serif"
-                    android:layout_marginHorizontal="10dp" />
+                    android:layout_marginEnd="30dp" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textStyle="italic|bold"
                     app:textAllCaps="false"
-                    android:textSize="20sp"
+                    android:textSize="24sp"
                     android:textColor="@color/colorGreenText"
                     android:textAllCaps="false"
                     android:textAlignment="center"
@@ -155,7 +165,7 @@
                     android:layout_height="match_parent"
                     android:textStyle="italic|bold"
                     app:textAllCaps="false"
-                    android:textSize="20sp"
+                    android:textSize="24sp"
                     android:textColor="@color/colorGreenText"
                     android:textAllCaps="false"
                     android:textAlignment="center"
@@ -169,4 +179,4 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
