--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,12 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorGreenText">#006500</color>
+    <color name="colorYellowText">#745900</color>
+    <color name="colorRedText">#810606</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorCustom1">#3F5772</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorLightGreen">#DEFFCE</color>
+    <color name="colorLightRed">#FFCECE</color>
+    <color name="colorLightYellow">#FAFFCE</color>
 </resources>
